お知らせ削除機能まで実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -6,4 +6,9 @@ ja:
         grade_2nd: '2年生'
         grade_3rd: '3年生'
         staff: 'スタッフ'
+    information:
+      category:
+        general: '一般'
+        announcement: '告知'
+        other: 'その他'
 
