itemsコントローラ作成

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -11,4 +11,7 @@ ja:
         general: '一般'
         announcement: '告知'
         other: 'その他'
-
+    item:
+      is_active:
+        sales_stop: '販売停止'
+        on_sale: '販売中'
