保護者用お知らせ追加、更新、削除機能実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,3 +15,8 @@ ja:
       is_active:
         sales_stop: '販売停止'
         on_sale: '販売中'
+    information_for_guardian:
+      category:
+        general: '一般'
+        announcement: '告知'
+        other: 'その他'
